# console_calc

./: .gitignore  CMakeLists.txt  README.md
include/: MathHelper.hpp
src/: MathHelper.cpp  main.cpp
